feat(desktop): sidebar mockup

--- a/src/lib/styles/_preflight.scss
+++ b/src/lib/styles/_preflight.scss
@@ -55,3 +55,10 @@ video {
   max-width: 100%;
   height: auto;
 }
+
+button {
+  background: none;
+  color: inherit;
+  font-family: inherit;
+  outline: none;
+}
