--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -1,1 +1,29 @@
 @use './_preflight';
+@use './_variables';
+@use './_fonts';
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  text-rendering: optimizeLegibility;
+}
+
+body {
+  background: var(--bg-body);
+  font-size: 1.6rem;
+  font-family: var(--font-main);
+  // padding: var(--pd-body);
+  color: var(--clr-gray);
+
+  min-height: 100vh;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
