--- a/src/lib/styles/_mixins.scss
+++ b/src/lib/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @forward './_variables';
+@use './_variables';
 
 %card-base {
   position: relative;
@@ -6,8 +7,8 @@
   padding: var(--pd-card);
 
   background-color: var(--bg-card);
-  border: 1px solid hsla(0, 0%, 100%, 0.06);
-  box-shadow: inset 0 1px 0 0 hsla(0, 0%, 100%, 0.05);
+  border: variables.$border-base;
+  box-shadow: inset 0 1px 0 0 hsla(0, 0%, 100%, 0.15);
   border-radius: var(--rounding-md);
 }
 
@@ -24,14 +25,14 @@
   font-family: inherit;
 
   padding: var(--pd-input);
-  border-radius: var(--rounding-md);
+  border-radius: var(--rounding-sm);
 }
 
 %input-text {
   @extend %input-base;
 
   background-color: var(--bg-input);
-  border: 1px solid var(--clr-input-border);
+  border: variables.$border-base;
   outline: none;
 
   &:hover {
@@ -39,21 +40,23 @@
   }
 
   &::placeholder {
-    color: var(--clr-gray-minor);
+    color: var(--clr-gray);
   }
 }
 
 %input-button {
   @extend %input-base;
 
-  background: linear-gradient(
-    180deg,
-    hsla(0, 0%, 100%, 0.03),
-    hsla(0, 0%, 100%, 0.1)
-  );
+  // background: linear-gradient(
+  //   180deg,
+  //   hsla(0, 0%, 100%, 0.03),
+  //   hsla(0, 0%, 100%, 0.1)
+  // );
+  background: var(--bg-input-active);
+  border: variables.$border-base;
 
-  box-shadow:
-    inset 0 1px 0 0 hsla(0, 0%, 100%, 0.05),
-    0 0 0 1px hsla(0, 0%, 100%, 0.25),
-    inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+  // box-shadow:
+  //   inset 0 1px 0 0 hsla(0, 0%, 100%, 0.05),
+  //   0 0 0 1px hsla(0, 0%, 100%, 0.25),
+  //   inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
