--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -18,7 +18,7 @@ body {
   font-size: 1.6rem;
   font-family: var(--font-main);
   // padding: var(--pd-body);
-  color: var(--clr-gray);
+  color: var(--clr-white);
 
   min-height: 100vh;
 }
